--- a/src/app/add-note-dialog/add-note-dialog.component.html
+++ b/src/app/add-note-dialog/add-note-dialog.component.html
@@ -5,11 +5,11 @@
     </div>
     <div class="input_wrapper">
         <p>Description</p>
-        <textarea [(ngModel)]="description" name="" id="" cols="30" rows="10"></textarea>
+        <textarea [(ngModel)]="content" name="" id="" cols="30" rows="10"></textarea>
     </div>
     <div class="btn_wrapper">
         <button class="btn emptyBtn" (click)="closeDialog()">Cancel</button>
-        <button class="btn fullBtn" (click)="addNote()">add note</button>
+        <button class="btn fullBtn" (click)="addNote()">Add note</button>
     </div>
     
 </div>
